--- a/Scss/components/_loginForm.scss
+++ b/Scss/components/_loginForm.scss
@@ -24,6 +24,7 @@
     animation: formReveal 0.7s ease-out 0.6s forwards;
 
     .form-container{
+        position: relative;
         display:flex;
         flex-direction: column;
         gap: 15px;
@@ -84,11 +85,12 @@
 
         }
         h4{
-            color: $site-orange;
+            margin-top: 10px;
+            color: $site-green;
             font-weight: bold;
             font-size: 14px;
-            margin-top: 15px;
-            a{
+            a{  
+                color: $site-orange;
                 cursor: pointer;
                 margin-inline: 7px;
                 text-decoration: none;
@@ -98,6 +100,15 @@
                 }
             }
         }
+
+        .error {
+            position: absolute;
+            bottom: 25px;
+            right: 0;
+            color: red;
+            font-size: 11px;
+        }
+
     }
 }
 
